Fix bad overflow wrapping

--- a/DiscordChatExporter.Core/Resources/ExportTemplates/HtmlShared/Main.css
+++ b/DiscordChatExporter.Core/Resources/ExportTemplates/HtmlShared/Main.css
@@ -20,6 +20,7 @@ img {
 .markdown {
     white-space: pre-wrap;
     line-height: 1.3;
+    overflow-wrap: break-word;
 }
 
 .spoiler {
